# sn-video-upscaler

./: .gitignore  README.md  pyproject.toml
colab/: README.md  sn_video_upscaler_colab_worker.ipynb
colab/source/: notebook.py
desktop/sn_video_upscaler/: __init__.py  main.py  settings.py  theme.py
desktop/sn_video_upscaler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
desktop/sn_video_upscaler/ui/: __init__.py  colab_card.py  main_window.py  preset_card.py  progress_card.py  queue_card.py  start_card.py  widgets.py
scripts/: build_notebook.py
tests/: test_notebook.py  test_skeleton.py
