[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sn-video-upscaler"
version = "0.1.0"
description = "Windows desktop app that upscales videos with Google Colab GPU."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Tuyul", email = "tuyulyak@gmail.com" },
]
dependencies = [
    "PySide6>=6.6",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[project.scripts]
sn-video-upscaler = "sn_video_upscaler.main:main"

[tool.setuptools.packages.find]
where = ["desktop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
